Fixing alignment of plus sign in add-comment link.

--- a/css/default-theme.less
+++ b/css/default-theme.less
@@ -69,8 +69,8 @@
       content: "+";
       border: 2px solid #DEDEDC;
       border-radius: 100px;
-      width: 22px;
-      height: 22px;
+      width: 23px;
+      height: 23px;
       color: #DEDEDC;
       display: block;
       text-align: center;
